--- a/VioMujer/package.json
+++ b/VioMujer/package.json
@@ -22,12 +22,16 @@
     "@angular/platform-browser-dynamic": "5.2.11",
     "@ionic-native/camera": "^4.17.0",
     "@ionic-native/core": "~4.15.0",
+    "@ionic-native/file": "^4.17.0",
+    "@ionic-native/file-transfer": "^4.17.0",
     "@ionic-native/splash-screen": "~4.15.0",
     "@ionic-native/status-bar": "~4.15.0",
     "@ionic/storage": "2.2.0",
     "cordova-android": "7.1.2",
     "cordova-plugin-camera": "4.0.3",
     "cordova-plugin-device": "^2.0.2",
+    "cordova-plugin-file": "6.0.1",
+    "cordova-plugin-file-transfer": "1.7.1",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
     "cordova-plugin-ionic-webview": "^2.2.3",
     "cordova-plugin-splashscreen": "^5.0.2",
@@ -58,7 +62,9 @@
       "cordova-plugin-camera": {
         "CAMERA_USAGE_DESCRIPTION": "La aplicación necesita acceso a la camara",
         "PHOTOLIBRARY_USAGE_DESCRIPTION": "La aplicación necesita acceso a la cámara"
-      }
+      },
+      "cordova-plugin-file": {},
+      "cordova-plugin-file-transfer": {}
     },
     "platforms": [
       "android"
